# lab3

./: CMakeLists.txt  README.md  main.cpp  proof_of_work.cpp  proof_of_work.h  sha256.cpp  sha256.h
